--- a/package.json
+++ b/package.json
@@ -25,15 +25,16 @@
     "homepage": "https://github.com/kakaruna/P2PLinkChromePlugin#readme",
     "dependencies": {
         "@types/chrome": "0.0.69",
-        "bootstrap": "4.1.1",
-        "jquery": "3.3.1",
         "npm-run-all": "4.1.3",
         "preact": "8.2.9",
+        "preact-material-components": "1.4.7",
         "rollup": "0.62.0",
+        "rollup-plugin-commonjs": "9.1.3",
         "rollup-plugin-copy": "0.2.3",
         "rollup-plugin-node-resolve": "3.3.0",
         "rollup-plugin-scss": "0.4.0",
-        "rollup-typescript": "1.1.2",
+        "rollup-plugin-typescript2": "0.15.1",
+        "tslib": "1.9.3",
         "typescript": "2.9.2"
     }
 }
