--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,13 @@
     "version": "2.9.2",
     "compilerOptions": {
         "declaration": false,
-        "module": "commonjs",
-        "target": "es5",
+        "module": "esnext",
+        "target": "es2015",
+        "moduleResolution": "node",
         "lib": ["es6", "dom"],
         "jsx": "react",
         "jsxFactory": "h",
+        "allowJs": true,
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true
     },
