--- a/package.json
+++ b/package.json
@@ -25,14 +25,30 @@
     "homepage": "https://github.com/kakaruna/P2PLinkChromePlugin#readme",
     "dependencies": {
         "@types/chrome": "0.0.69",
+        "@types/node": "10.5.2",
+        "@types/react": "16.4.6",
+        "@types/react-dom": "16.0.6",
+        "@types/react-redux": "6.0.4",
+        "@types/redux-logger": "3.0.6",
+        "node-sass": "4.9.2",
         "npm-run-all": "4.1.3",
-        "preact": "8.2.9",
-        "preact-material-components": "1.4.7",
+        "postcss-clean": "1.1.0",
+        "postcss-preset-env": "5.2.1",
+        "postcss-scss": "1.0.6",
+        "react": "16.4.1",
+        "react-dom": "16.4.1",
+        "react-redux": "5.0.7",
+        "redux": "4.0.0",
+        "redux-logger": "3.0.6",
+        "reselect": "3.0.1",
         "rollup": "0.62.0",
         "rollup-plugin-commonjs": "9.1.3",
         "rollup-plugin-copy": "0.2.3",
+        "rollup-plugin-delete": "0.1.2",
         "rollup-plugin-node-resolve": "3.3.0",
-        "rollup-plugin-scss": "0.4.0",
+        "rollup-plugin-postcss": "1.6.2",
+        "rollup-plugin-replace": "2.0.0",
+        "rollup-plugin-terser": "1.0.1",
         "rollup-plugin-typescript2": "0.15.1",
         "tslib": "1.9.3",
         "typescript": "2.9.2"
