--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
         "moduleResolution": "node",
         "lib": ["es6", "dom"],
         "jsx": "react",
-        "jsxFactory": "h",
+        "sourceMap": true,
         "allowJs": true,
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true
