--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     },
     "homepage": "https://github.com/kakaruna/P2PLinkChromePlugin#readme",
     "dependencies": {
+        "@material-ui/core": "1.3.1",
+        "@material-ui/icons": "1.1.0",
         "@types/chrome": "0.0.69",
         "@types/node": "10.5.2",
         "@types/react": "16.4.6",
@@ -38,8 +40,10 @@
         "react": "16.4.1",
         "react-dom": "16.4.1",
         "react-redux": "5.0.7",
+        "react-swipeable-views": "0.12.15",
         "redux": "4.0.0",
         "redux-logger": "3.0.6",
+        "redux-saga": "1.0.0-beta.1",
         "reselect": "3.0.1",
         "rollup": "0.62.0",
         "rollup-plugin-commonjs": "9.1.3",
