--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "react-dom": "16.4.1",
         "react-redux": "5.0.7",
         "react-swipeable-views": "0.12.15",
+        "react-virtualized": "9.20.1",
         "redux": "4.0.0",
         "redux-logger": "3.0.6",
         "redux-saga": "1.0.0-beta.1",
